templates/load-test.yaml
apiVersion: v1
kind: Pod

metadata:
  name: l8r-load-1
  namespace: ngsa
  labels:
    app: l8r-load-1

spec:
  restartPolicy: OnFailure
  containers:
  - name: l8r
    image: $ACR_NAME.azurecr.io/retaildevcrews/ngsa-lr:beta
    imagePullPolicy: Always
    args:
    - -l
    - "100"
    - -r
    - -s
    - ${ASB_DOMAIN}/memory
    - ${ASB_DOMAIN}/cosmos
    - -f
    - benchmark.json
    # - --prometheus
    # resources:
    #   limits:
    #     memory: 512Mi
    #     cpu: 500m
    #   requests:
    #     memory: 256Mi
    #     cpu: 250m
