templates/flux-v1-legacy.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: flux-cd
  name: flux-cd
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: flux
  namespace: flux-cd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: flux
  strategy:
    type: Recreate
  template:
    metadata:
      annotations:
        prometheus.io/port: "3031"
      labels:
        app.kubernetes.io/name: flux
        app: flux
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        agentpool: npuser01
      serviceAccountName: flux
      volumes:
      - name: git-key
        secret:
          secretName: flux-git-deploy
          defaultMode: 0400
      containers:
      - name: flux
        image: docker.io/fluxcd/flux:1.25.3
        imagePullPolicy: IfNotPresent
        securityContext:
          capabilities:
            drop:
            - ALL
          allowPrivilegeEscalation: false
          # create folder in the root fs when cloning repos
          readOnlyRootFilesystem: false
          # access to root folder like /.kube/config
          runAsNonRoot: false
        volumeMounts:
        - name: git-key
          mountPath: /etc/fluxd/ssh
          readOnly: true
        resources:
          requests:
            cpu: 50m
            memory: 64Mi
        ports:
        - containerPort: 3030
        livenessProbe:
          httpGet:
            port: 3030
            path: /api/flux/v6/identity.pub
          initialDelaySeconds: 5
          timeoutSeconds: 5
        readinessProbe:
          httpGet:
            port: 3030
            path: /api/flux/v6/identity.pub
          initialDelaySeconds: 5
          timeoutSeconds: 5
        args:
        - --git-url=$ASB_GIT_REPO
        - --git-branch=$ASB_GIT_BRANCH
        - --git-path=$ASB_GIT_PATH,deploy/bootstrap
        - --git-readonly
        - --sync-state=secret
        - --listen-metrics=:3031
        - --git-timeout=30s
        - --registry-disable-scanning=true
        - --sync-garbage-collection
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: memcached
  namespace: flux-cd
spec:
  replicas: 1
  selector:
    matchLabels:
      app.kubernetes.io/name: memcached
  template:
    metadata:
      labels:
        app.kubernetes.io/name: memcached
    spec:
      nodeSelector:
        kubernetes.io/os: linux
        agentpool: npuser01
      containers:
      - name: memcached
        image: docker.io/library/memcached:1.5.20
        imagePullPolicy: IfNotPresent
        resources:
          requests:
            memory: 512Mi
        args:
        - -m 512
        - -I 5m    # Maximum size for one item
        - -p 11211 # Default port
        # - -vv    # Uncomment to get logs of each request and response.
        ports:
        - name: clients
          containerPort: 11211
        securityContext:
          runAsUser: 11211
          runAsGroup: 11211
          allowPrivilegeEscalation: false
---
apiVersion: v1
kind: Service
metadata:
  name: memcached
  namespace: flux-cd
spec:
  ports:
    - name: memcached
      port: 11211
  selector:
    app.kubernetes.io/name: memcached
