templates/loderunner.yaml
apiVersion: v1
kind: Namespace
metadata:
  labels:
    name: loderunner
  name: loderunner
---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: loderunner
  namespace: loderunner
  labels:
    app.kubernetes.io/name: loderunner
spec:
  replicas: 1
  selector:
    matchLabels:
      app: loderunner
  template:
    metadata:
      labels:
        app: loderunner
    spec:
      containers:
        - name: app
          image: ghcr.io/retaildevcrews/ngsa-lr:beta
          imagePullPolicy: Always
          ports:
            - name: http
              containerPort: 8080
              protocol: TCP
          resources:
            limits:
              memory: "512Mi"
              cpu: "1000m"
            requests:
              memory: "512Mi"
              cpu: "500m"
          args:
          - -l
          - "1000"
          - -r
          - -s
          - http://ngsa-memory.ngsa:8080
          - http://ngsa-cosmos.ngsa:8080
          - http://ngsa-java.ngsa:8080
          - -f
          - benchmark.json
          - -p
          - --zone
          - az-${ASB_SPOKE_LOCATION}-${ASB_ENV}
          - --region
          - ${ASB_SPOKE_LOCATION}
---

apiVersion: v1
kind: Service
metadata:
  name: loderunner
  namespace: loderunner
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: loderunner
