templates/ngsa-cosmos.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: ngsa-cosmos
  namespace: ngsa
  labels:
    app.kubernetes.io/name: ngsa-cosmos
spec:
  replicas: 1
  selector:
    matchLabels:
      app: ngsa-cosmos
  template:
    metadata:
      labels:
        app: ngsa-cosmos
        aadpodidbinding: $ASB_NGSA_MI_NAME
      annotations:
        prometheus.io/scrape: 'true'
        prometheus.io/port: '8080'
    spec:
      containers:
        - name: app
          image: ghcr.io/retaildevcrews/ngsa-app:beta
          imagePullPolicy: Always

          args:
          - --prometheus
          - --url-prefix
          - /cosmos
          - --zone
          - az-eastus2
          - --region
          - East

          ports:
            - name: http
              containerPort: 8080
              protocol: TCP

          resources:
            limits:
              cpu: 500m
              memory: 512Mi
            requests:
              cpu: 500m
              memory: 512Mi

          volumeMounts:
            - name: secrets
              mountPath: "/app/secrets"
      volumes:
        - name: secrets
          csi:
            driver: secrets-store.csi.k8s.io
            readOnly: true
            volumeAttributes:
              secretProviderClass: ngsa-secrets

      nodeSelector:
        agentpool: npuser01

---

apiVersion: v1
kind: Service
metadata:
  name: ngsa-cosmos
  namespace: ngsa
spec:
  type: ClusterIP
  ports:
    - port: 8080
      targetPort: http
      protocol: TCP
      name: http
  selector:
    app: ngsa-cosmos

---

apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ngsa-cosmos-vs
  namespace: ngsa
spec:
  gateways:
  - istio-system/istio-gateway
  hosts:
  - ${ASB_DOMAIN}-${ASB_SPOKE_LOCATION}
  http:
  - match:
    - uri:
        prefix: /cosmos/
    - uri:
        exact: /cosmos
    rewrite:
      uri: /
    route:
    - destination:
        port:
          number: 8080
        host: ngsa-cosmos
